components/waypoint-gateway/httproute-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress
  namespace: bookinfo
spec:
  parentRefs:
  - name: ingress
    namespace: istio-ingress
  hostnames:
  - "bookinfo-waypoint-istio-ingress.apps.cluster-xp6rn.dynamic.redhatworkshops.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /productpage
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: PathPrefix
        value: /login
    - path:
        type: PathPrefix
        value: /logout
    - path:
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
    - name: productpage
      port: 9080
